package com.java.design.patterns;

public enum PaymentType {
	CREDIT_CARD, PAYPAL, BITCOIN
}
